:art: Shorten Mozilla links in the comments

--- a/css/04-flexbox/example-02/style.css
+++ b/css/04-flexbox/example-02/style.css
@@ -31,6 +31,6 @@
 - By default flex items don't shrink below their minimum content
   size. To change this, set the item's min-width or min-height.
 
-https://developer.mozilla.org/en-US/docs/Web/CSS/flex
+https://dev.moz/css/flex
 
 */
