--- a/css/04-flexbox/example-09/style.css
+++ b/css/04-flexbox/example-09/style.css
@@ -55,6 +55,6 @@ consider each line as a new flex container
 You can combine the two properties flex-direction and flex-wrap
 into the flex-flow 
 
-https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox#the_two_axes_of_flexbox
+https://dev.moz/css/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox#the_two_axes_of_flexbox
 
 */
