--- a/css/04-flexbox/example-10/style.css
+++ b/css/04-flexbox/example-10/style.css
@@ -38,6 +38,6 @@ Free space = 200
 #1 and #3 each take one share
 #2 takes two shares
 
-https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox#the_two_axes_of_flexbox
+https://dev.moz/css/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox#the_two_axes_of_flexbox
 
 */
