--- a/css/04-flexbox/example-14/style.css
+++ b/css/04-flexbox/example-14/style.css
@@ -39,4 +39,4 @@ body {
   margin-left: auto;
 }
 
-/* https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Aligning_Items_in_a_Flex_Container#aligning_content_on_the_cross_axis_%E2%80%94_the_align-content_property */
+/* https://dev.moz/css/CSS_Flexible_Box_Layout/Aligning_Items_in_a_Flex_Container#aligning_content_on_the_cross_axis_%E2%80%94_the_align-content_property */
