--- a/css/04-flexbox/example-16/style.css
+++ b/css/04-flexbox/example-16/style.css
@@ -62,8 +62,8 @@ When to use flexbox
 - Form controls
 
 Read more
-https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Typical_Use_Cases_of_Flexbox#navigation
-https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Relationship_of_Flexbox_to_Other_Layout_Methods
+https://dev.moz/css/CSS_Flexible_Box_Layout/Typical_Use_Cases_of_Flexbox#navigation
+https://dev.moz/css/CSS_Flexible_Box_Layout/Relationship_of_Flexbox_to_Other_Layout_Methods
 
 
 */
