--- a/css/04-flexbox/example-11/style.css
+++ b/css/04-flexbox/example-11/style.css
@@ -35,6 +35,6 @@ values as align-items plus a value of auto, which
 will reset the value to that which is defined on
 the flex container.
 
-https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox#the_two_axes_of_flexbox
+https://dev.moz/css/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox#the_two_axes_of_flexbox
 
 */
